--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-sm-4">
 				<form id="form">
-					<label for="bird-input">Add a movie</label><br>
+					<label for="bird-input">Enter a bird</label><br>
 					<input type="text" id="bird-input">
 					<input id="add-bird" type="submit" value="Submit">
 				</form>
